ordo/tests/snapshots/integration_year_ordo__day_vespers@_2024_12_13.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--lucy--virgin-and-martyr\", \"st--lucy\"]"
expression: s.0
---
2024-12-13
Vespers of St. Lucy, Virgin and Martyr:
Vespers:
  Antiphons:   Proper
  Psalms:      Common of the Blessed Virgin Mary
  Chapter:     Common of Virgins
  Hymn:        Common of Virgins
  Verse:       Common of Virgins
  Magnificat:  Proper
  Collect:     Proper
  Commemoration of Feria VI week II of Advent:
    Magnificat Antiphon: Proper
    Verse: Ordinary of Advent (or Psalter)
    Collect: Proper
