ordo/tests/snapshots/integration_year_ordo__day_vespers@_2024_12_16.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--eusebius--bishop-and-martyr\", \"st--eusebius\"]"
expression: s.0
---
2024-12-16
Vespers of St. Eusebius, Bishop and Martyr:
Vespers:
  Antiphons:   Ordinary of Advent (or Psalter)
  Psalms:      Psalter
  Chapter:     Common of Confessor Bishops
  Hymn:        Common of Confessor Bishops
  Verse:       Common of Confessor Bishops
  Magnificat:  Common of Confessor Bishops
  Collect:     Proper
  Commemoration of Feria II week III of Advent:
    Magnificat Antiphon: Proper
    Verse: Ordinary of Advent (or Psalter)
    Collect: Proper
