ordo/tests/snapshots/integration_year_ordo__day_vespers@_2024_12_22.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"dominica-iv-of-advent\", \"dominica-of-advent\"]"
expression: s.0
---
2024-12-22
Second Vespers of Dominica IV of Advent:
Vespers:
  Antiphons:   Proper
  Psalms:      Psalter
  Chapter:     Proper
  Hymn:        Ordinary of Advent (or Psalter)
  Verse:       Ordinary of Advent (or Psalter)
  Magnificat:  Proper
  Collect:     Proper
