ordo/tests/snapshots/integration_year_ordo__day_vespers@_2024_12_23.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"feria-ii-week-iv-of-advent\", \"feria-of-advent\"]"
expression: s.0
---
2024-12-23
Vespers of Feria II week IV of Advent:
Vespers:
  Antiphons:   Ordinary of Advent (or Psalter)
  Psalms:      Psalter
  Chapter:     Ordinary of Advent (or Psalter)
  Hymn:        Ordinary of Advent (or Psalter)
  Verse:       Ordinary of Advent (or Psalter)
  Magnificat:  Proper
  Collect:     Proper
