ordo/tests/snapshots/integration_year_ordo__day_vespers@_2024_12_24.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"the-nativity-of-our-lord-jesus-christ\"]"
expression: s.0
---
2024-12-24
First Vespers of The Nativity of our Lord Jesus Christ:
Vespers:
  Antiphons:   Proper
  Psalms:      of Sunday (w.116)
  Chapter:     Proper
  Hymn:        Proper
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
